Mon Nov 29 19:22:08 2010  URABE Shyouhei  <shyouhei@ruby-lang.org>

	* eval.c (ruby_vm_cleanup): According to Ko1, timer thread is per
	  process, not per VM.  So a cleanup of a VM cannot blindly stop
	  the timer thread.  However, there can be discussions whether the
	  timer thread belongs to the main VM.  A child VM might live
	  longer than a parent VM (design choice; that mdoel can be) and
	  on such situation, the timer thread should not finish with the
	  main VM.  So this part is subject to change.

Mon Nov 29 15:37:49 2010  URABE Shyouhei  <shyouhei@ruby-lang.org>

	* README: memorandum.

Mon Nov 29 09:55:40 2010  URABE Shyouhei  <shyouhei@ruby-lang.org>

	* vm_core.h (rb_vm_specific_ptr_for_specific_vm): added.

	* include/ruby/vm.h (ruby_vm_specific_ptr): no need of vm to be
	  passed.

Sun Nov 28 05:01:06 2010  URABE Shyouhei  <shyouhei@ruby-lang.org>

	* eval.c (ruby_vm_cleanup): Not sure, but it seems
	  global_vm_waiting should also signaled here.  Maybe not.

Fri Nov 26 20:07:13 2010  URABE Shyouhei  <shyouhei@ruby-lang.org>

	* vm.c (vm_init2): Reference count should start from zero.
	  Otherwise a if statement can never examine if a vm has no
	  reference.

	* vm.c (vm_create): It turned out that vm->ref_count is
	  incremented twice per a VM creation, thus it never reaches to
	  zero again.  This is definitely a bug.

	* vm.c (ruby_vmptr_destruct): Likewise a vm->parent->ref_count
	  will never been decremented and hence a ref_count of a vm
	  experiencing a child creation can never reache to zero.  Also a
	  bug.

Fri Nov 26 18:37:49 2010  URABE Shyouhei  <shyouhei@ruby-lang.org>

	* vm.c (rb_vm_initialize): Rewrite argv passage mechanism using
	  ruby's normal array/string APIs.  This is because vm->argv, when
	  created here, shall be freed _after_ the VM itself has been shut
	  down.  But a sad thing is vm->argv in general does not always
	  need to, because the argv passed to the process itself is out of